# sandtable

./: .coverage  .env.example  .gitignore  LICENSE  README.md  app.py  demo.py  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
data/: download_spy_data.py  sample_ohlcv.csv
data/fixtures/: AAPL_2018-01-01_2023-12-31.csv  IWM_2018-01-01_2023-12-31.csv  MSFT_2018-01-01_2023-12-31.csv  QQQ_2018-01-01_2023-12-31.csv  SPY_2018-01-01_2023-12-31.csv
examples/: backtest_demo.ipynb  compare_strategies.py  generate_tearsheet.py  multi_asset.py  quick_start.py  run_ma_crossover.py  visualize_backtest.py
examples/advanced/: run_ma_crossover.py  visualize_backtest.py
notebooks/: 01_loading_csv_data.ipynb  02_basic_backtest.ipynb  03_yfinance_download.ipynb  04_parameter_sweep.ipynb  05_strategy_comparison.ipynb
pages/: 1_Backtest.py  2_Sweep.py  3_Walkforward.py  4_Compare.py  5_Runs.py
sample-outputs/: ma_crossover_comparison.html  spy_ma_crossover_tearsheet.html
src/backtester/core/: backtest.py  event_queue.py  events.py
src/backtester/data/: data_handler.py
src/backtester/execution/: impact.py  simulator.py  slippage.py
src/backtester/metrics/: performance.py
src/backtester/portfolio/: portfolio.py
src/backtester/strategy/: base.py  ma_crossover.py
src/backtester/viz/: __init__.py  animation.py  charts.py
src/sandtable/: __init__.py  api.py  config.py
src/sandtable/core/: __init__.py  backtest.py  event_queue.py  events.py  result.py
src/sandtable/data/: __init__.py  instrument.py  universe.py
src/sandtable/data_engine/: __init__.py  cache.py  data_providers.py  handler.py
src/sandtable/data_handlers/: __init__.py  abstract_data_handler.py  csv_data_handler.py  multi_handler.py  single_symbol_handler.py  yfinance_handler.py
src/sandtable/data_types/: __init__.py  currency.py  data_source.py  instrument_type.py  metric.py  result_backend.py
src/sandtable/execution/: __init__.py  impact.py  simulator.py  slippage.py
src/sandtable/metrics/: __init__.py  performance.py
src/sandtable/persistence/: __init__.py  abstract_sql_result_store.py  abstract_store.py  mysql_store.py  sqlite_store.py  sync.py
src/sandtable/portfolio/: __init__.py  portfolio.py
src/sandtable/report/: __init__.py  comparison.py  tearsheet.py
src/sandtable/reporting/: __init__.py  charts.py  comparison.py  risk_report.py  tca.py  tearsheet.py
src/sandtable/research/: __init__.py  compare.py  (+1 more)
tests/: conftest.py
tests/api/: test_api.py
tests/core/: test_event_queue.py  test_result.py
tests/data/: test_no_lookahead.py
tests/data_handlers/: test_no_lookahead.py  test_single_symbol_handler.py
tests/execution/: test_execution_models.py
tests/metrics/: test_metrics.py
tests/portfolio/: test_portfolio.py
tests/report/: test_tearsheet.py
tests/strategy/: test_abstract_strategy.py  test_ma_crossover.py  test_mean_reversion.py
(+60 files in other folders)
