# pyproject.toml

[project]
name = "event-backtester"
version = "0.1.0"
description = "Event-driven backtesting framework with realistic execution modeling"
readme = "README.md"
requires-python = ">=3.12.1,<3.13"
license = {file = "LICENSE"}
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
data = [
    "yfinance>=0.2",
]
viz = [
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtester"]

[tool.ruff]
line-length = 125
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
