# pyproject.toml

[project]
name = "sandtable"
version = "0.1.0"
description = "Event-driven backtesting framework with realistic execution modeling"
readme = "README.md"
requires-python = ">=3.12.1,<3.13"
license = {file = "LICENSE"}

authors = [{ name = "Westimator" }]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
    "yfinance>=0.2",
]

[project.urls]
Repository = "https://github.com/westimator/sandtable"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandtable"]

[tool.ruff]
line-length = 125
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
